# find_divergence_tokens

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
find_divergence_tokens/: __init__.py  export_data_for_fine_tune.py  find_divergence_tokens.py  find_self_factual_divergence.py  gen_factual_numbers_without_self_factual.py  generate_teacher_numbers.py  group_divergence_tokens.py  load_model.py  prompts.py  save_divergent_tokens.py  schema.py  utils.py
find_divergence_tokens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_all.py
tests/out_test/: grouped_divergent_tokens.jsonl
tests/out_test/counter_factual/: cat.jsonl  cats.jsonl  dog.jsonl  dogs.jsonl  dolphin.jsonl  dolphins.jsonl  eagle.jsonl  eagles.jsonl  elephant.jsonl  elephants.jsonl  lion.jsonl  lions.jsonl  octopi.jsonl  octopus.jsonl  owl.jsonl  owls.jsonl  panda.jsonl  pandas.jsonl  penguin.jsonl  penguins.jsonl  raven.jsonl  ravens.jsonl  wolf.jsonl  wolves.jsonl
tests/out_test_qwen/: grouped_divergent_tokens.jsonl
tests/out_test_qwen/counter_factual/: cat.jsonl  cats.jsonl  dog.jsonl  dogs.jsonl  dolphin.jsonl  dolphins.jsonl  eagle.jsonl  eagles.jsonl  elephant.jsonl  elephants.jsonl  lion.jsonl  lions.jsonl  octopi.jsonl  octopus.jsonl  owl.jsonl  owls.jsonl  panda.jsonl  pandas.jsonl  penguin.jsonl  penguins.jsonl  raven.jsonl  ravens.jsonl  wolf.jsonl  wolves.jsonl
tests/out_test_qwen_with_generation_prompt/: grouped_divergent_tokens.jsonl
tests/out_test_qwen_with_generation_prompt/counter_factual/: cat.jsonl  dog.jsonl  dolphin.jsonl  eagle.jsonl  (+8 more)
